# clean_code

./: .env.example  .env.test  .gitignore  conftest.py  main.py  pyproject.toml
app/alembic/: env.py
app/core/: __init__.py  base.py  config.py  context.py  db.py  encryptions.py  exceptions.py  logging.py  page_info.py  pagination.py  sql.py  type_pagination.py  utils.py
app/graphql/: client.py  http_handler.py  mutation.py  resolver.py  schema.graphql  schema.py
app/graphql/scalars/: uuid.py
app/models/: base_model.py  search_filter_mixin.py  types.py
app/repositories/: base_sql_repository.py
